# deepflow

./: .gitignore  API_DOCUMENTATION.md  README.md
app/: bun.lockb  eslint.config.mjs  package.json
app/src/actions/: mcp.ts  workflow.ts
app/src/app/(default)/: layout.tsx  page.tsx
app/src/app/(default)/chats/: page.tsx
app/src/app/(default)/workflow/: page.tsx
app/src/components/chat/: loading-state.tsx  message-input.tsx  message-list.tsx  message.tsx
app/src/components/home/: question-cards.tsx  welcome-section.tsx
app/src/components/settings/: index.tsx
app/src/components/workflow/: global-undo-notification.tsx  node.tsx  sidebar.tsx
app/src/components/workflow/sidebar/: connect-tab.tsx  create-tab.tsx  edit-tab.tsx  index.tsx  layout-tab.tsx  overview-tab.tsx  sidebar-header.tsx  tab-navigation.tsx  undo-notification.tsx
app/src/hooks/: use-audio-recording.ts  use-chat-session.ts  use-file-upload.ts  use-workflow.ts
app/src/lib/: api.ts  chat-utils.ts  constants.ts  layout-utils.ts
app/src/store/: chat.ts
app/src/types/: chat.ts  mcp.ts
chatbot/: docker-compose.yml
chatbot/handler/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  env.example.json  pyproject.toml  requirements.txt  template.yaml
chatbot/handler/scripts/: seed_database.py
chatbot/handler/src/: main.py
chatbot/handler/src/config/: config.py  redis_client.py
chatbot/handler/src/database/: database.py  models.py  seed_data.py
chatbot/handler/src/repositories/: __init__.py  chat.py  graph.py
chatbot/handler/src/routes/v1/: __init__.py  chat.py  dynamic_graph.py  graphs.py  mcp.py
chatbot/handler/src/schemas/requests/: graph.py  mcp.py
chatbot/handler/src/schemas/responses/: graph.py  mcp.py
chatbot/handler/src/services/agent/: dynamic_graph.py  graph.py  llm.py  state.py  tools.py  utils.py
chatbot/handler/src/services/dynamic_graph/: __init__.py
chatbot/handler/src/services/dynamic_graph/engine/: __init__.py  config_manager.py  execution_engine.py  graph_builder.py  graph_cache.py  state_manager.py
chatbot/handler/src/services/dynamic_graph/execution/: __init__.py  tracker.py
chatbot/handler/src/services/dynamic_graph/nodes/: __init__.py  base_handler.py  condition_handler.py  handler_registry.py  human_handler.py  llm_handler.py  start_end_handler.py  tool_handler.py
chatbot/handler/src/services/dynamic_graph/utils/: tool_converter.py
chatbot/handler/src/services/mcp/: __init__.py  utils.py
chatbot/handler/src/utils/: functions.py
(+3 files in other folders)
