[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alex Nguyen", email = "alexnguyenth96@gmail.com"},
]
dependencies = [
    "bcrypt==4.3.0",
    "jwt==1.3.1",
    "pyjwt==2.10.1",
    "fastapi==0.115.12",
    "mangum==0.19.0",
    "boto3==1.37.31",
    "sqlalchemy==2.0.40",
    "redis==5.2.1",
    "python-multipart==0.0.20",
    "google-search-results==2.4.2",
    "google-auth==2.38.0",
    "google-auth-oauthlib==1.2.1",
    "requests==2.32.3",
    "pydantic[email]",
    "psycopg[binary]",
    "langchain[aws]",
    "langchain-community",
    "langchain-postgres",
    "langchain-tavily",
    "langgraph",
    "langsmith",
    "jsonschema==4.23.0",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "langgraph-cli[inmem]>=0.2.10",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''