[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handler"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "boto3>=1.38.35",
    "fastapi>=0.115.12",
    "google-search-results>=2.4.2",
    "jsonschema>=4.24.0",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.25",
    "langchain-community>=0.3.25",
    "langchain-postgres>=0.0.13",
    "langchain-tavily>=0.2.1",
    "langgraph>=0.4.8",
    "mangum>=0.19.0",
    "psycopg>=3.2.9",
    "pydantic[email]>=2.11.5",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''
